Fixed margins on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -171,7 +171,7 @@ input[type="text"] {
   .grid {
     grid-template-columns: repeat(auto-fit, minmax(112px, 1fr));
     gap: 5px;
-    margin: 0 auto;
+    margin: 0 25px;
   }
 
   .card,
